# task_service

./: Dockerfile  pyproject.toml
app/: alembic.ini  main.py  pyproject.toml
app/auth/: api.py  auth_utils.py  hasher.py  models.py  refresh_session.py  schemas.py
app/chat/: api.py  api_ex.py  message_token.py  models.py  schemas.py
app/core/: config.py  database.py  exceptions.py  redis.py
app/dao/: __init__.py  dependencies.py
app/dao/repositories/: __init__.py  irepository.py  repositories.py  sqlalchemy_repository.py
app/dao/services/: __init__.py  category_service.py  chat_service.py  executor_service.py  file_service.py  iservice.py  message_service.py  offer_service.py  offer_type_service.py  password_upd_service.py  personal_data_service.py  user_service.py  user_verify_service.py
app/dao/utils/: s3_service.py
app/migrations/: env.py
app/migrations/versions/: 03626cc797f8_update_tables_names.py  08d11a4d781c_add_executor_table.py  0fabcab90ea9_user_account.py  2375d68ef56f_28_08_head.py  435c9d84b1ea_init.py  503cc0d580f8_user_verify_info.py  60b9a1a59faf_rm_refresh_token.py  6a83848354f1_init.py  6c62b3bfe6d6_initial.py  6c633631c35a_files_table.py  9c8b406740f4_password_token.py  b2b8dc83ba0c_session_to_redis.py  da7047800e91_del_cost_for_offer.py  f80dfef63d3f_create_on_delete_const.py
app/offer/: api.py  models.py  schemas.py  validators.py
app/repositories/: base.py  dependencies.py  repositories.py  s3_service.py  services.py
app/tasks/: celery.py  message_data.py  templates.py
